// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> Render must match regular() 1`] = `
<div>
  <nav
    aria-label="Person settings"
    aria-labelledby="menu-heading"
    class="menu"
  >
    <a
      aria-current="page"
      class="menu-item"
      href="#url"
    >
      Account
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Profile
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Emails
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Notifications
    </a>
  </nav>
</div>
`;

exports[`<Menu /> Render must match withHeading() 1`] = `
<div>
  <nav
    aria-label="Person settings"
    aria-labelledby="menu-heading"
    class="menu"
  >
    <span
      class="menu-heading"
    >
      Menu heading
    </span>
    <a
      aria-current="page"
      class="menu-item"
      href="#url"
    >
      Account
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Profile
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Emails
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Notifications
    </a>
  </nav>
</div>
`;

exports[`<Menu /> Render must match withIcons() 1`] = `
<div>
  <nav
    aria-label="Person settings"
    aria-labelledby="menu-heading"
    class="menu"
  >
    <a
      aria-current="page"
      class="menu-item"
      href="#url"
    >
      Account
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Profile
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Emails
    </a>
    <a
      class="menu-item"
      href="#url"
    >
      Notifications
    </a>
  </nav>
</div>
`;
